@@ -4,6 +4,7 @@
 # UI/UX changes, add subsession introduced
 # Dashboard displays unique room count
 # Dashboard displays user count
+# Dashboard displays file count
 
 # 0.031
 # [View User] Download files works
